dev|MERGE - feat-front-authentication